2007-05-28  Hans de Goede <j.w.r.degoede@hhs.nl>

	* providers/ldap/gda-ldap.h:
	Define LDAP_DEPRECATED to fix missing prototype warnings. At least
	2 of tese warnings were fatal bugs on 64 bit platforms (because the compiler 
	then assumes the function returns an int == 32 bit, where as in reality it 
	returns a pointer == 64 bit).

2007-05-21  Vivien Malerba <malerba@gnome-db.org>

	* providers/sqlite/gda-sqlite-provider.c: fixed the NOT NULL reported attibute for table's fields
	* data/sales_test.db: complexified a bit the sample database
	* libgda/graph/gda-graph-item.c: fixed saving and loading to and from XML when coordinates
	are negative
	* libgda/gda-dict.c: avoid string comparison when string is NULL to
	avoid crash

2007-05-17  Vivien Malerba <malerba@gnome-db.org>

	* samples/table_copy.c: new example showing how to copy data from one
	table to the other.

2007-05-17  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-object-ref.c: when losing the reference to the referenced object, correctly
	respond to users still wanting to know which was the referenced object
	* libgda/gda-init.c: make the default dictionary handle graph objects
	* providers/sqlite/gda-sqlite-provider.c: correct which statement is executed to force 
	SQLite to re-read the database structure
	* libgda/gda-data-model-query.c: avoid showing a warning about
	modification query's param type if expected type is unknown
	* libgda/gda-query.c: display a warning when expanding a table.* field
	into a list of fields when the dictionary is not up to date

2007-05-14  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-value.c: remove warnings in gda_value_stringify() for invalid dates
	* libgda/gda-client.c: correctly implement connection sharing
	* libgda/gda-client.c: correctly emit the "event_notification" signal when a connection is opened, 
	bug #316698
	* libgda/gda-column.c: memory leak correction