@@ -1,3 +1,8 @@
+2007-06-03  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda/gda-client.c: fixed gda_client_find_connection() where the first existing
+	connection was always returned regardless of the requested DSN
+
 2007-05-28  Hans de Goede <j.w.r.degoede@hhs.nl>
 
 	* providers/ldap/gda-ldap.h:
